--- a/processor/Dockerfile
+++ b/processor/Dockerfile
@@ -16,7 +16,6 @@ COPY processor/json2udm_cloud.py .
 # Imposta logging non bufferizzato per Cloud Logging
 ENV PYTHONUNBUFFERED=1
 
-# Comando per avviare l'applicazione con Gunicorn
-# Ascolta sulla porta 8080 (default Cloud Run)
+# Comando per avviare l'applicazione con Gunicorn, ascolta sulla porta 8080 (default Cloud Run)
 # Timeout aumentato per elaborazione pcap
 CMD exec gunicorn --bind :${PORT:-8080} --workers 1 --threads 8 --timeout 600 processor_app:app
