--- a/sniffer/compose.yml
+++ b/sniffer/compose.yml
@@ -5,17 +5,12 @@ services:
     build: .
     container_name: wireshark-sniffer
     restart: unless-stopped
-
-    # Configurazione di rete e privilegi necessari per tshark
-    network_mode: "host" # Usa la rete dell'host (equivalente a --network host)
+    env_file:
+      - .env
+    network_mode: "host"
     cap_add:
       - NET_ADMIN # Permessi per gestire interfacce di rete
       - NET_RAW   # Permessi per leggere pacchetti raw
 
-    # Variabili d'ambiente lette da un file .env nella stessa directory
-    env_file:
-      - .env
-
-    # Assicurati che la directory ./sniffer/gcp-key esista e contenga 'key.json'
     volumes:
       - ./sniffer/gcp-key:/app/gcp-key:ro # Monta la chiave in sola lettura
