--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,11 +1,21 @@
-# Rinomina in terraform.tfvars e compila
+gcp_project_id              = ""
+gcp_region                  = ""
+gcs_location                = ""
+base_name                   = ""
 
-gcp_project_id              = "IL_TUO_ID_PROGETTO_GCP"
-# gcp_region                  = "europe-west1" # Default
-# gcs_location                = "EU"           # Default
-# base_name                   = "wireshark-udm" # Default
-incoming_pcap_bucket_name = "NOME-UNIVOCO-BUCKET-PCAP-IN"    # Sostituisci! Deve essere globalmente univoco.
-processed_udm_bucket_name = "NOME-UNIVOCO-BUCKET-UDM-OUT"   # Sostituisci! Deve essere globalmente univoco.
-processor_cloud_run_image = "REGIONE-docker.pkg.dev/PROGETTO/REPO/IMMAGINE:TAG" # Sostituisci con l'URI della tua immagine!
-# test_vm_zone                = "europe-west1-b" # Default, verifica che esista nella tua regione
-# allow_unauthenticated_invocations = true # Default. Imposta a false per usare OIDC (più sicuro)
+incoming_pcap_bucket_name = "IN_BUCKET_NAME"
+processed_udm_bucket_name = "OUT_BUCKET_NAME" 
+
+processor_cloud_run_image = "URI_IMMAGINE_PUSHATA_SU_ARTIFACT_REGISTRY"
+
+test_vm_zone                = ""
+allow_unauthenticated_invocations = false
+
+cloud_run_max_concurrency = 10
+cloud_run_cpu             = "1000m"
+cloud_run_memory          = "512Mi"
+
+// ssh_source_ranges = ["IP_PUBBLICO/32"]
+
+// enable_bucket_versioning  = true
+// cmek_key_name             = "" // Lascia vuoto per usare Google-managed keys
