--- a/sniffer/.env
+++ b/sniffer/.env
@@ -1,4 +1,3 @@
 GCP_PROJECT_ID=gruppo-2
-INCOMING_BUCKET=NOME_BUCKET_PCAP_IN # Dall'output TF
-PUBSUB_TOPIC_ID=ID_TOPIC_PUBSUB     # Dall'output TF (es. projects/...)
-# ROTATE=-b filesize:5120 # decommenta se vuoi personalizzare la rotazione
+INCOMING_BUCKET=BUCKET_PCAP_IN
+PUBSUB_TOPIC_ID=ID_TOPIC_PUBSUB
