--- a/sniffer/compose.yml
+++ b/sniffer/compose.yml
@@ -3,7 +3,7 @@
 services:
   sniffer:
     build: .
-    container_name: wireshark-sniffer
+    container_name: chronicle-sniffer
     restart: unless-stopped
     env_file:
       - .env
