--- a/sniffer/.env.example
+++ b/sniffer/.env.example
@@ -1,4 +1,5 @@
 GCP_PROJECT_ID=IL_TUO_ID_PROGETTO_GCP
 INCOMING_BUCKET=NOME_BUCKET_PCAP_IN     # Dall'output TF
 PUBSUB_TOPIC_ID=ID_TOPIC_PUBSUB         # Dall'output TF (es. projects/...)
+SNIFFER_ID="my-edge-location-01"        # Identificatore univoco per questa istanza dello sniffer
 # ROTATE=-b filesize:5120               # Decommenta se vuoi personalizzare la rotazione
